# api_predictions_and_bets

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
app/: __init__.py  main.py
tests/: test_transformations.py
tests/data/: players.json
